aq dakomentarda socialuri iconebi

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
             </div>
         </div>
 
-        <div class="social">
+        <!-- <div class="social">
             <div class="item fb"><a href="#" target="_blank"></a></div>
             <div class="item insta"><a href="#" target="_blank"></a></div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <div>
